tests/bad/ternary_bad_cond.ae
/// fail: Condition must be boolean

def main() {
	let x = 0 if null else "hello"
}